--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,6 +125,7 @@ web = [
     "markdown",
     "curies[fastapi]",
     "a2wsgi",
+    "api-analytics[fastapi]",
 ]
 paper-ranking = [
     "indra",
