--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,11 +58,11 @@ requires-python = ">=3.9"
 dependencies = [
     "requests",
     "tqdm",
-    "pystow>=0.1.13",
+    "pystow>=0.7.6",
     "click",
     "more_click>=0.1.2",
     "pydantic[email]>=2.0",
-    "curies>=0.7.0"
+    "curies>=0.7.0",
 ]
 
 [project.optional-dependencies]
