--- a/tox.ini
+++ b/tox.ini
@@ -132,7 +132,10 @@ deps =
     types-tqdm
     types-beautifulsoup4
     types-Markdown
+    matplotlib-stubs
+    pandas-stubs
     fastapi[all]
+    scikit-learn  # for paper ranking (temp)
 extras =
     web
     charts
@@ -141,7 +144,6 @@ extras =
     gha
     export
     health
-    paper-ranking
     mapping-checking
 commands =
     mypy --ignore-missing-imports --strict src/bioregistry/
