Install package during type checking (#1654)
This takes out `skip_install = true` in the mypy section of tox.ini.
This means that the Bioregistry package now gets installed, making it
possible to type check several more things.

--- a/tox.ini
+++ b/tox.ini
@@ -122,7 +122,6 @@ description = Lint the Bioregistry data
 [testenv:mypy]
 deps =
     mypy
-    pydantic
     types-PyYAML
     types-Markdown
     types-tabulate
@@ -133,9 +132,10 @@ deps =
     types-tqdm
     types-beautifulsoup4
     types-Markdown
-    pystow
-    curies
+    matplotlib-stubs
+    pandas-stubs
     fastapi[all]
+    scikit-learn  # for paper ranking (temp)
 extras =
     web
     charts
@@ -144,9 +144,7 @@ extras =
     gha
     export
     health
-    paper-ranking
     mapping-checking
-skip_install = true
 commands =
     mypy --ignore-missing-imports --strict src/bioregistry/
 description = Run the mypy tool to check static typing on the project.
