--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,10 +128,10 @@ web = [
     "api-analytics[fastapi]",
 ]
 paper-ranking = [
-    "indra",
     "pandas",
     "scikit-learn",
     "tabulate",
+    "pubmed-downloader",
 ]
 mapping-checking = [
     "pandas",
