--- a/tox.ini
+++ b/tox.ini
@@ -135,7 +135,6 @@ deps =
     matplotlib-stubs
     pandas-stubs
     fastapi[all]
-    scikit-learn  # for paper ranking (temp)
 extras =
     web
     charts
@@ -145,6 +144,7 @@ extras =
     export
     health
     mapping-checking
+    paper-ranking
 commands =
     mypy --ignore-missing-imports --strict src/bioregistry/
 description = Run the mypy tool to check static typing on the project.
