--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,7 +131,7 @@ paper-ranking = [
     "pandas",
     "scikit-learn",
     "tabulate",
-    "pubmed-downloader",
+    "pubmed-downloader>=0.10.0",
 ]
 mapping-checking = [
     "pandas",
