--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,7 +131,7 @@ paper-ranking = [
     "pandas",
     "scikit-learn",
     "tabulate",
-    "pubmed-downloader>=0.0.11",
+    "pubmed-downloader>=0.0.11; python_version >= '3.10'",
 ]
 mapping-checking = [
     "pandas",
