--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,7 +130,7 @@ paper-ranking = [
     "pandas",
     "scikit-learn",
     "tabulate",
-    "pubmed-downloader>=0.0.11; python_version >= '3.10'",
+    "pubmed-downloader>=0.0.11",
 ]
 mapping-checking = [
     "pandas",
