Refactor paper ranking (#1666)
Closes #1664 

- use `pubmed_downloader` to access pubmed, which has a pydantic model
wrapping it
- reuse bioregistry functionality when possible instead of
re-implementing
- enable full type checking
- rewrite unit tests to have more explicit mocks
- use publication dates instead of years

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,10 +127,10 @@ web = [
     "api-analytics[fastapi]",
 ]
 paper-ranking = [
-    "indra",
     "pandas",
     "scikit-learn",
     "tabulate",
+    "pubmed-downloader>=0.0.12",
 ]
 mapping-checking = [
     "pandas",
