--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,6 +174,7 @@ plugins = [
 # Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
 [tool.doc8]
 max-line-length = 120
+ignore = ["D001"]
 
 # Coverage, see https://coverage.readthedocs.io/en/latest/config.html
 [tool.coverage.run]
