--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Start blazegraph and virtuoso triplestores with docker
         if: matrix.os == 'ubuntu-latest'
         run: |
-          docker-compose up -d
+          docker compose up -d
           sleep 20
           docker compose exec virtuoso isql -U dba -P dba exec='GRANT "SPARQL_SELECT_FED" TO "SPARQL";'          
       - name: Test with pytest and generate coverage file
