Improve federated SPARQL query testing to use docker and add virtuoso test (#789)
---------

Co-authored-by: Charles Tapley Hoyt <cthoyt@gmail.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,5 +21,5 @@ exclude docs/*.md
 exclude docs/guides/*.md
 exclude docs/_config.yml
 
-exclude .appveyor.yml .bumpversion.cfg .coveragerc .flake8 .travis.yml .readthedocs.yml tox.ini .pre-commit-config.yaml Dockerfile CITATION.cff
+exclude .appveyor.yml .bumpversion.cfg .coveragerc .flake8 .travis.yml .readthedocs.yml tox.ini .pre-commit-config.yaml Dockerfile CITATION.cff docker-compose.yml
 include LICENSE *.md *.rst
