--- a/tox.ini
+++ b/tox.ini
@@ -259,7 +259,7 @@ deps =
 skip_install = true
 deps =
     uv
-    setuptools
+    uv_build
 commands =
     uv build --sdist --wheel --no-build-isolation
 
