Switch to UV build backend (#1732)

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,6 @@ envlist =
     # always keep coverage-clean first
     #coverage-clean
     # code linters/stylers
-    manifest
     format
     lint
     pyroma
@@ -82,11 +81,6 @@ extras =
 deps = coverage
 skip_install = true
 commands = coverage erase
-
-[testenv:manifest]
-deps = check-manifest
-skip_install = true
-commands = check-manifest
 
 [testenv:pre-commit]
 skip_install = true
@@ -259,7 +253,7 @@ deps =
 skip_install = true
 deps =
     uv
-    setuptools
+    uv_build
 commands =
     uv build --sdist --wheel --no-build-isolation
 
