--- a/exports/raw/biolink.yaml
+++ b/exports/raw/biolink.yaml
@@ -1159,10 +1159,68 @@ slots:
     is_a: node property
     description: >-
       Records whether the clinical trials are testing the intervention.
-    domain: association
+    domain: clinical trial
     range: string
 
-   ## Biological Entity properties
+  clinical trial brief title:
+    is_a: node property
+    description: >-
+      The brief title of a clinical trial as determined by clinicaltrials.gov
+    range: string
+    domain: clinical trial
+
+  clinical trial enrollment type:
+    is_a: node property
+    description: >-
+      The enrollment type of a clinical trial as determined by clinicaltrials.gov (actual,
+      anticipated, or estimated)
+    range: string
+    domain: clinical trial
+
+  clinical trial start date:
+    is_a: node property
+    description: >-
+      The start date of a clinical trial as determined by clinicaltrials.gov
+    range: date
+    domain: clinical trial
+  clinical trial enrollment:
+    is_a: node property
+    description: >-
+      The enrollment number of a clinical trial as determined by clinicaltrials.gov
+    range: integer
+    domain: clinical trial
+
+  clinical trial age stage:
+    is_a: node property
+    description: >-
+      The age stage of a clinical trial as determined by clinicaltrials.gov (adult, child, older adult)
+    range: ClinicalTrialAgeStageEnum
+    domain: clinical trial
+
+  clinical trial age range:
+    is_a: node property
+    description: >-
+      The age range of a clinical trial as determined by clinicaltrials.gov
+    range: string
+    domain: clinical trial
+
+  clinical trial interventions:
+    is_a: node property
+    description: >-
+        connects a clinical trial to one or more interventions being tested in the trial
+    range: clinical intervention
+    multivalued: true
+    domain: clinical trial
+
+  clinical trial conditions:
+    is_a: node property
+    description: >-
+        connects a clinical trial to one or more conditions being studied in the trial
+    range: disease or phenotypic feature
+    multivalued: true
+    domain: clinical trial
+
+    ## Biological Entity properties
 
   has biological sequence:
     is_a: node property
@@ -5443,6 +5501,20 @@ slots:
     is_a: related to at instance level
     inverse: develops from
 
+  taxon:
+    is_a: node property
+    description: >-
+      A property that indicates the taxonomic classification of an entity.
+      Values for this slot should be from the NCBITaxon ontology.
+    comments: >-
+      Note there is also a predicate 'in taxon'
+      that can be used to instantiate an edge between a taxon entity and a thing with taxon entity.  This is
+      an acceptable practice for KG construction, but for many applications it is more convenient to
+      use this property slot to directly annotate the taxon on the entity itself.
+    in_subset:
+      - translator_minimal
+    range: uriorcurie
+
   in taxon:
     aliases: ['instance of', 'is organism source of gene product', 'organism has gene', 'gene found in organism', 'gene product has organism source']
     is_a: related to at instance level
@@ -6787,6 +6859,7 @@ classes:
       - synonym
       - equivalent identifiers
       - information content
+      - taxon
     slot_usage:
       category:
         required: true
@@ -9431,7 +9504,18 @@ classes:
     slots:
       - clinical trial phase
       - clinical trial primary purpose
-      - creation date  # maybe?
+      - clinical trial intervention model
+      - clinical trial overall status
+      - clinical trial brief title
+      - clinical trial enrollment type
+      - clinical trial start date
+      - clinical trial enrollment
+      - clinical trial age stage
+      - clinical trial age range
+      - clinical trial tested intervention
+      - clinical trial interventions
+      - clinical trial conditions
+      - creation date
     id_prefixes:
       - CLINICALTRIALS
 
@@ -10505,12 +10589,12 @@ classes:
 
   chemical gene interaction association:
     description: >-
-      describes a physical interaction between a chemical entity and a gene or gene product. Any biological or chemical
+      describes an interaction between a chemical entity and a gene or gene product. Any biological or chemical
       effect resulting from such an interaction are out of scope, and covered by the ChemicalAffectsGeneAssociation type
       (e.g. impact of a chemical on the abundance, activity, structure, etc, of either participant in the interaction)
     is_a: association
-    exact_mappings:
-      - SIO:001257
+    broad_mappings:
+      - SIO:001257    ## chemical-gene association
     slots:
       - subject form or variant qualifier
       - subject part qualifier
@@ -10526,7 +10610,7 @@ classes:
       object:
         range: gene or gene product
       predicate:
-        subproperty_of: physically interacts with
+        subproperty_of: interacts with
       subject form or variant qualifier:
         range: ChemicalOrGeneOrGeneProductFormOrVariantEnum
       subject part qualifier:
@@ -12318,6 +12402,15 @@ enums:
         description: The recruitment or availability status is unknown.
       WITHDRAWN:
         description: The study was halted before enrolling its first participant.
+
+  ClinicalTrialAgeStageEnum:
+    description: >-
+      Enumeration of age stages or populations commonly used in clinical trials
+      to categorize participant demographics and target populations.
+    permissible_values:
+      adult:
+      child:
+      older_adult:
 
   ApprovalStatusEnum:
     description: >-
