--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ align = [
     "defusedxml",
     "class-resolver",
     "fairsharing-client>=0.1.0",
-    "pandas",
+    "pandas<3.0",
 ]
 export = [
     "pyyaml",
@@ -100,12 +100,12 @@ charts = [
     "matplotlib",
     "matplotlib_venn",
     "seaborn",
-    "pandas",
+    "pandas<3.0",
     "jinja2",
 ]
 health = [
     "click_default_group",
-    "pandas",
+    "pandas<3.0",
     "tabulate",
     "pyyaml",
     "jinja2",
@@ -126,13 +126,13 @@ web = [
     "api-analytics[fastapi]",
 ]
 paper-ranking = [
-    "pandas",
+    "pandas<3.0",
     "scikit-learn",
     "tabulate",
     "pubmed-downloader>=0.0.12",
 ]
 mapping-checking = [
-    "pandas",
+    "pandas<3.0",
     "sentence_transformers",
 ]
 
